# tul-schedule-converter

./: .gitignore  README.md  pyproject.toml  setup.cfg
src/: function.py
src/converter/: __init__.py  calendar.py  collections.py  event_blueprint.py  events.py  factories.py  misc.py  parsers.py  semester.py
src/converter/factories/: __init__.py  event.py  ics_event.py
tests/: __init__.py  conftest.py  test_handler.py
tests/stubs/: schedule_2024_summer.csv
